--- a/ChristmasIndex.html
+++ b/ChristmasIndex.html
@@ -29,7 +29,7 @@
             <a href="#FunFacts">Fun Facts About Christmas</a><br>
             <a href="#YouTubeVideo">Christmas Music Video</a><br>
             <a href="#ChristmasAdvent">Christmas Advent Calendar</a><br>
-            <a href="https://jessicawood4456.github.io/ProfWebDevPage/index.html">Link to another page I created</a>  
+            <a href="https://jessicawood4456.github.io/WebDevProject/">Link to another page I created</a>  
         </nav>
         <br>
 
